# easy-aas-dns

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  justfile  pyproject.toml
charts/easyaas/: Chart.yaml  values.yaml
controllers/: audit_controller.py  consts.py  dns_record_controller.py  helpers.py  resource_controller.py  terraform_resource_controller.py
controllers/audit_controller/: __init__.py  audit_controller.py
controllers/controller_manager/: __init__.py  controller_manager.py
controllers/crds/: terraformresource.yaml
controllers/files/: easyaas_resource_params.json  terragrunt.hcl
controllers/kubernetes_resources/: job.yaml
controllers/resource_controller/: __init__.py  resource_controller.py
controllers/terraform_resource_controller/: __init__.py  consts.py  job_watcher.py  terraform_resource_controller.py
crds/: dnsrecord.yaml
docker/terragrunt-runner/: Dockerfile  run.sh
local-testing/: docker-compose.yaml  repository.Dockerfile
local-testing/k3d/: easyaas.yaml
local-testing/scripts/: zip
opa/: opa-mgmt-values.yaml
reposerver/: Dockerfile  docker-compose.yaml  index.html
reposerver/server_blocks/: git-repo.conf
resources/dns-record/: crd.yaml  resource.yaml  terraformresource.yaml
samples/: dnsrecord.yaml
scripts/: zip
terraform/record/: versions.tf
terragrunt/: .terraform.lock.hcl  terraform.tfstate  terragrunt.hcl
terragrunt/aws/: terragrunt.hcl
terragrunt/local/: localstack-providers.patch  localstack.hcl  terragrunt.hcl
terragrunt/localstack/: localstack.hcl  (+2 more)
tests/: helpers_test.py
(+39 files in other folders)
