[tool.poetry]
name = "easy-aas-dns"
version = "0.1.0"
description = ""
authors = ["Nilscan"]

[tool.poetry.dependencies]
python = "^3.9"
kopf = "^1.36.1"
kubernetes = "^26.1.0"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
